<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manage Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="send_sms">Send Tasks</string>
    <string name="title_activity_add_number_">Manage Contacts</string>
    <string name="add_number">Add Contact</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="show_contacts">Show Your Contacts</string>
    <string name="title_activity_show__contacts_">Show Contacts</string>
    <string name="First_and_Last_Name">First and Last Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Delete_Contact">Delete Contact</string>
    <string name="delete_all_contacts">Delete all Contacts</string>
    <string name="title_activity_add_task">AddTaskActivit</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_task">Add Task</string>
    <string name="date">Date:</string>
    <string name="subject">Subject:</string>
    <string name="task">Task Description:</string>
    <string name="show_tasks">Show Tasks</string>
    <string name="title_activity_show_tasks">ShowTasksActivity</string>
    <string name="Delete_Task">Delete Task</string>
    <string name="delete_all_tasks">Delete all Tasks</string>

</resources>
