<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_send_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/send_sms" />

    <Button
        android:id="@+id/add_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_send_sms"
        android:layout_below="@+id/button_send_sms"
        android:onClick="addNumber"
        android:text="@string/manage_contacts" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_number"
        android:layout_below="@+id/add_number"
        android:text="@string/add_task"
        android:onClick="addTask" />

    <Button
        android:id="@+id/show_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_task"
        android:layout_below="@+id/add_task"
        android:text="@string/show_tasks"
        android:onClick="showTasks" />

    <EditText
        android:id="@+id/number_to_delete"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/show_tasks"
        android:layout_below="@+id/show_tasks"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/delete_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/number_to_delete"
        android:layout_alignBottom="@+id/number_to_delete"
        android:layout_alignRight="@+id/show_tasks"
        android:layout_toRightOf="@+id/number_to_delete"
        android:onClick="deleteTask"
        android:text="@string/Delete_Task" />

    <Button
        android:id="@+id/delete_all_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/delete_contact"
        android:layout_below="@+id/delete_contact"
        android:layout_marginTop="5dp"
        android:onClick="deleteAllTasks"
        android:text="@string/delete_all_tasks" />

</RelativeLayout>