<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNumber_Activity" >

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_name"
        android:layout_alignParentTop="true"
        android:text="@string/First_and_Last_Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_add_number"
        android:layout_below="@+id/name"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_add_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/button_add_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_add_number"
        android:layout_below="@+id/text_add_number"
        android:onClick="addNumber"
        android:text="@string/add_number" />

    <Button
        android:id="@+id/Button_show_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_add_Number"
        android:layout_below="@+id/button_add_Number"
        android:onClick="showContacts"
        android:text="@string/show_contacts" />

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_add_number"
        android:layout_below="@+id/text_name"
        android:text="@string/Phone_Number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/delete_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Button_show_contacts"
        android:layout_below="@+id/Button_show_contacts"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/number_to_delete"
        android:onClick="deleteContact"
        android:text="@string/Delete_Contact" />

    <EditText
        android:id="@+id/number_to_delete"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delete_contact"
        android:layout_alignBottom="@+id/delete_contact"
        android:layout_alignLeft="@+id/Button_show_contacts"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/delete_all_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/delete_contact"
        android:layout_below="@+id/delete_contact"
        android:text="@string/delete_all_contacts"
        android:onClick="deleteAllContacts" />

</RelativeLayout>